--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "@gsap/react": "^2.1.1",
         "@next/third-parties": "^15.2.0",
+        "@types/react-google-recaptcha": "^2.1.9",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
         "gsap": "^3.12.5",
@@ -21,6 +22,8 @@
         "next": "15.2.0",
         "react": "19.0.0-rc-66855b96-20241106",
         "react-dom": "19.0.0-rc-66855b96-20241106",
+        "react-google-recaptcha": "^3.1.0",
+        "react-hook-form": "^7.66.1",
         "tailwind-merge": "^2.5.4",
         "tailwindcss-animate": "^1.0.7"
     },
