feat: Update GitHub Actions workflow to include .nojekyll file for Next.js deployment

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,6 +43,11 @@ jobs:
 
       - name: Build with Next.js
         run: pnpm run build
+        env:
+          GITHUB_PAGES: "true"
+
+      - name: Add .nojekyll file
+        run: echo "" > ./out/.nojekyll
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
