--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@types/react-google-recaptcha": "^2.1.9",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
+        "framer-motion": "^12.23.24",
         "gsap": "^3.12.5",
         "html-react-parser": "^5.2.3",
         "lenis": "^1.1.16",
