--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "lenis": "^1.1.16",
         "lucide-react": "^0.460.0",
         "next": "15.2.0",
+        "next-themes": "^0.4.6",
         "react": "19.0.0-rc-66855b96-20241106",
         "react-dom": "19.0.0-rc-66855b96-20241106",
         "react-google-recaptcha": "^3.1.0",
