--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     },
     "dependencies": {
         "@gsap/react": "^2.1.1",
+        "@hcaptcha/react-hcaptcha": "^1.16.0",
         "@next/third-parties": "^15.2.0",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
